welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:9: error: ';' expected but '[' found.
}[/!]
 ^Program:10: error: ';' expected but '[' found.
}[/!] 
 ^